--- a/pom.xml
+++ b/pom.xml
@@ -2,32 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.microbean</groupId>
-  <artifactId>microbean-kubernetes-controller</artifactId>
+  <groupId>fr.xenogenics</groupId>
+  <artifactId>kubernetes-controller</artifactId>
   <version>0.4.0-SNAPSHOT</version>
 
-  <parent>
-    <groupId>org.microbean</groupId>
-    <artifactId>microbean-pluginmanagement-pom</artifactId>
-    <version>17</version>
-    <relativePath/>
-  </parent>
-
-  <name>microBean Kubernetes Controller</name>
+  <name>Kubernetes Controller</name>
   <description>Tools for writing Kubernetes controllers in Java.</description>
   <inceptionYear>2017</inceptionYear>
-  <url>https://microbean.github.io/${project.artifactId}</url>
+  <url>https://github.com/xenogenics/${project.artifactId}/</url>
 
   <scm>
-    <connection>scm:git:git@github.com:microbean/${project.artifactId}.git</connection>
-    <developerConnection>scm:git:git@github.com:microbean/${project.artifactId}.git</developerConnection>
-    <url>https://github.com/microbean/${project.artifactId}/</url>
+    <connection>scm:git:git@github.com:xenogenics/${project.artifactId}.git</connection>
+    <developerConnection>scm:git:git@github.com:xenogenics/${project.artifactId}.git</developerConnection>
+    <url>https://github.com/xenogenics/${project.artifactId}/</url>
     <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
     <system>Github</system>
-    <url>https://github.com/microbean/${project.artifactId}/issues/</url>
+    <url>https://github.com/xenogenics/${project.artifactId}/issues/</url>
   </issueManagement>
 
   <dependencyManagement>
@@ -116,13 +109,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.microbean</groupId>
-        <artifactId>microbean-development-annotations</artifactId>
-        <version>0.2.3</version>
-        <type>jar</type>
-      </dependency>
-
-      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
         <version>1.7.30</version>
@@ -148,6 +134,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>4.13</version>
       <type>jar</type>
       <scope>test</scope>
     </dependency>
@@ -159,9 +146,7 @@
       <scope>test</scope>
     </dependency>
 
-
     <!-- Compile-scoped dependencies. -->
-
 
     <dependency>
       <groupId>io.fabric8</groupId>
@@ -184,13 +169,6 @@
       <scope>compile</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.microbean</groupId>
-      <artifactId>microbean-development-annotations</artifactId>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-
   </dependencies>
 
   <build>
@@ -199,20 +177,18 @@
 
     <pluginManagement>
       <plugins>
-
         <plugin>
           <groupId>com.github.spotbugs</groupId>
           <artifactId>spotbugs-maven-plugin</artifactId>
           <version>4.2.0</version>
         </plugin>
-
       </plugins>
     </pluginManagement>
 
     <plugins>
-
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.0</version>
         <configuration>
           <systemPropertyVariables>
             <skipClusterTests>${skipClusterTests}</skipClusterTests>
@@ -221,24 +197,19 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
-
       <plugin>
         <groupId>com.github.github</groupId>
         <artifactId>site-maven-plugin</artifactId>
+        <version>0.12</version>
       </plugin>
-
     </plugins>
   </build>
 
   <properties>
-
-    <!-- maven-javadoc-plugin properties; see https://maven.apache.org/plugins/maven-javadoc-plugin/javadoc-mojo.html -->
-    <links> https://microbean.github.io/microbean-kubernetes/apidocs/,https://microbean.github.io/microbean-development-annotations/apidocs/,http://jcip.net/annotations/doc/,https://static.javadoc.io/io.fabric8/kubernetes-client/5.12.4,https://static.javadoc.io/io.fabric8/kubernetes-model/5.12.4,https://square.github.io/okhttp/3.x/okhttp/</links>
-
     <skipClusterTests>true</skipClusterTests>
-
     <org.slf4j.simpleLogger.log.io.fabric8>debug</org.slf4j.simpleLogger.log.io.fabric8>
-
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
   </properties>
 
   <reporting>
